Cleaning up the pplogloss captions.

--- a/code-postprocessing/bbob_pproc/latex_commands_for_html.html
+++ b/code-postprocessing/bbob_pproc/latex_commands_for_html.html
@@ -185,6 +185,31 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         40:<span style="color:#FF00FF">\Diamond</span>. 
 
 <div class="p"><!----></div>
+##bbobloglosstablecaptionrlbased##
+
+        <span class="roman">aRT</span>&nbsp;loss ratio versus the budget in number of f-evaluations
+        divided by dimension.
+        For each given budget <span class="roman">FEvals</span>, the target value f<sub><span class="roman">t</span></sub>&nbsp;is computed
+        as the best target f-value reached within the
+        budget by the given algorithm.
+        Shown is then the <span class="roman">aRT</span>&nbsp;to reach f<sub><span class="roman">t</span></sub>&nbsp;for the given algorithm
+        or the budget, if the GECCO-BBOB-2009 best algorithm
+        reached a better target within the budget,
+        divided by the best <span class="roman">aRT</span>&nbsp;        seen in GECCO-BBOB-2009 to reach f<sub><span class="roman">t</span></sub>.
+        Line: geometric mean. Box-Whisker error bar: 25-75%-ile with median
+        (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">aRT</span>&nbsp;loss ratio
+        (points). The vertical line gives the maximal number of function evaluations
+        in a single trial in this function subset. See also
+        the following figure for results on each function subgroup.
+
+<div class="p"><!----></div>
+##bbobloglossfigurecaptionrlbased##
+
+        <span class="roman">aRT</span>&nbsp;loss ratios (see the previous figure for details).
+        Each cross (<span style="color:#0000FF">+</span>) represents a single function, the line
+        is the geometric mean.
+
+<div class="p"><!----></div>
 ##bbobECDFslegendfixed5##
 
 Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for 51 targets with target precision in 10<sup>[&#8722;8..2]</sup> for all functions and subgroups in 5-D. The "best 2009" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2009 for each selected target.
@@ -342,6 +367,31 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         40:<span style="color:#FF00FF">\Diamond</span>. 
 
 <div class="p"><!----></div>
+##bbobloglosstablecaptionfixed##
+
+        <span class="roman">aRT</span>&nbsp;loss ratio versus the budget in number of f-evaluations
+        divided by dimension.
+        For each given budget <span class="roman">FEvals</span>, the target value f<sub><span class="roman">t</span></sub>&nbsp;is computed
+        as the best target f-value reached within the
+        budget by the given algorithm.
+        Shown is then the <span class="roman">aRT</span>&nbsp;to reach f<sub><span class="roman">t</span></sub>&nbsp;for the given algorithm
+        or the budget, if the GECCO-BBOB-2009 best algorithm
+        reached a better target within the budget,
+        divided by the best <span class="roman">aRT</span>&nbsp;        seen in GECCO-BBOB-2009 to reach f<sub><span class="roman">t</span></sub>.
+        Line: geometric mean. Box-Whisker error bar: 25-75%-ile with median
+        (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">aRT</span>&nbsp;loss ratio
+        (points). The vertical line gives the maximal number of function evaluations
+        in a single trial in this function subset. See also
+        the following figure for results on each function subgroup.
+
+<div class="p"><!----></div>
+##bbobloglossfigurecaptionfixed##
+
+        <span class="roman">aRT</span>&nbsp;loss ratios (see the previous figure for details).
+        Each cross (<span style="color:#0000FF">+</span>) represents a single function, the line
+        is the geometric mean.
+
+<div class="p"><!----></div>
 ##bbobECDFslegendbiobjfixed5##
 
 Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for 58 targets with target precision in {&#8722;10<sup>&#8722;4</sup>, &#8722;10<sup>&#8722;4.2</sup>,  &#8722;10<sup>&#8722;4.4</sup>, &#8722;10<sup>&#8722;4.6</sup>, &#8722;10<sup>&#8722;4.8</sup>, &#8722;10<sup>&#8722;5</sup>, 0, 10<sup>&#8722;5</sup>, 10<sup>&#8722;4.9</sup>, 10<sup>&#8722;4.8</sup>, ..., 10<sup>&#8722;0.1</sup>, 10<sup>0</sup>} for all functions and subgroups in 5-D. 
@@ -492,29 +542,29 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         40:<span style="color:#FF00FF">\Diamond</span>. 
 
 <div class="p"><!----></div>
-##bbobloglosstablecaption##
+##bbobloglosstablecaptionbiobjfixed##
 
-    <span class="roman">aRT</span>&nbsp;loss ratio versus the budget in number of f-evaluations
-    divided by dimension.
-    For each given budget <span class="roman">FEvals</span>, the target value f<sub><span class="roman">t</span></sub>&nbsp;is computed
-    as the best target f-value reached within the
-    budget by the given algorithm.
-    Shown is then the <span class="roman">aRT</span>&nbsp;to reach f<sub><span class="roman">t</span></sub>&nbsp;for the given algorithm
-    or the budget, if the GECCO-BBOB-2009 best algorithm
-    reached a better target within the budget,
-    divided by the best <span class="roman">aRT</span>&nbsp;    seen in GECCO-BBOB-2009 to reach f<sub><span class="roman">t</span></sub>.
-    Line: geometric mean. Box-Whisker error bar: 25-75%-ile with median
-    (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">aRT</span>&nbsp;loss ratio
-    (points). The vertical line gives the maximal number of function evaluations
-    in a single trial in this function subset. See also
-    the following figure for results on each function subgroup.
+        <span class="roman">aRT</span>&nbsp;loss ratio versus the budget in number of f-evaluations
+        divided by dimension.
+        For each given budget <span class="roman">FEvals</span>, the target value f<sub><span class="roman">t</span></sub>&nbsp;is computed
+        as the best target f-value reached within the
+        budget by the given algorithm.
+        Shown is then the <span class="roman">aRT</span>&nbsp;to reach f<sub><span class="roman">t</span></sub>&nbsp;for the given algorithm
+        or the budget, if the GECCO-BBOB-2009 best algorithm
+        reached a better target within the budget,
+        divided by the best <span class="roman">aRT</span>&nbsp;        seen in GECCO-BBOB-2009 to reach f<sub><span class="roman">t</span></sub>.
+        Line: geometric mean. Box-Whisker error bar: 25-75%-ile with median
+        (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">aRT</span>&nbsp;loss ratio
+        (points). The vertical line gives the maximal number of function evaluations
+        in a single trial in this function subset. See also
+        the following figure for results on each function subgroup.
 
 <div class="p"><!----></div>
-##bbobloglossfigurecaption##
+##bbobloglossfigurecaptionbiobjfixed##
 
-    <span class="roman">aRT</span>&nbsp;loss ratios (see the previous figure for details).  
-    Each cross (<span style="color:#0000FF">+</span>) represents a single function, the line
-    is the geometric mean.
+        <span class="roman">aRT</span>&nbsp;loss ratios (see the previous figure for details).
+        Each cross (<span style="color:#0000FF">+</span>) represents a single function, the line
+        is the geometric mean.
 
 <div class="p"><!----></div>
 ##bbobppfigslegendrlbased##
@@ -543,5 +593,5 @@ Different symbols correspond to different algorithms given in the legend of f<su
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 31 Mar 2016, 11:56.</small>
+version 4.08.<br />On 31 Mar 2016, 14:33.</small>
 </html>
