--- a/code-postprocessing/bbob_pproc/latex_commands_for_html.html
+++ b/code-postprocessing/bbob_pproc/latex_commands_for_html.html
@@ -37,6 +37,14 @@ Bootstrapped empirical cumulative distribution of the number of objective functi
 Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for all functions and subgroups in 20-D. The targets are chosen from 10<sup>[&#8722;8..2]</sup>such that the  artificial algorithm just not reached them within a given budget of k &times; DIM, with k &#8712; {0.5, 1.2, 3, 10, 50}. The "best 2009" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2009 for each selected target.
 
 <div class="p"><!----></div>
+##bbobppfigslegendrlbased##
+
+Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluations
+                        as log<sub>10</sub> value) divided by dimension versus dimension. The target function value
+                        is chosen such that the REFERENCEALGORITHM artificial algorithm just failed to achieve
+                        an <span class="roman">aRT</span>&nbsp;of BBOBPPFIGSFTARGET&times;<span class="roman">DIM</span>. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>24</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
+
+<div class="p"><!----></div>
 ##bbobpprldistrlegendrlbased##
 
          Empirical cumulative distribution functions (ECDF), plotting the fraction of
@@ -218,6 +226,13 @@ Bootstrapped empirical cumulative distribution of the number of objective functi
 ##bbobECDFslegendfixed20##
 
 Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for 51 targets with target precision in 10<sup>[&#8722;8..2]</sup> for all functions and subgroups in 20-D. The "best 2009" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2009 for each selected target.
+
+<div class="p"><!----></div>
+##bbobppfigslegendfixed##
+
+Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluations
+                    as log<sub>10</sub> value), divided by dimension for target function value BBOBPPFIGSFTARGET
+                    versus dimension. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>24</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
 
 <div class="p"><!----></div>
 ##bbobpprldistrlegendfixed##
@@ -402,6 +417,13 @@ Bootstrapped empirical cumulative distribution of the number of objective functi
 Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for 58 targets with target precision in {&#8722;10<sup>&#8722;4</sup>, &#8722;10<sup>&#8722;4.2</sup>,  &#8722;10<sup>&#8722;4.4</sup>, &#8722;10<sup>&#8722;4.6</sup>, &#8722;10<sup>&#8722;4.8</sup>, &#8722;10<sup>&#8722;5</sup>, 0, 10<sup>&#8722;5</sup>, 10<sup>&#8722;4.9</sup>, 10<sup>&#8722;4.8</sup>, ..., 10<sup>&#8722;0.1</sup>, 10<sup>0</sup>} for all functions and subgroups in 20-D. 
 
 <div class="p"><!----></div>
+##bbobppfigslegendbiobjfixed##
+
+Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluations
+                    as log<sub>10</sub> value), divided by dimension for target function value BBOBPPFIGSFTARGET
+                    versus dimension. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>55</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
+
+<div class="p"><!----></div>
 ##bbobpprldistrlegendbiobjfixed##
 
          Empirical cumulative distribution functions (ECDF), plotting the fraction of
@@ -567,31 +589,11 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         is the geometric mean.
 
 <div class="p"><!----></div>
-##bbobppfigslegendrlbased##
-
-Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluations 
-                as log<sub>10</sub> value) divided by dimension versus dimension. The target function value 
-                is chosen such that the REFERENCEALGORITHM artificial algorithm just failed to achieve 
-                an <span class="roman">aRT</span>&nbsp;of BBOBPPFIGSFTARGET&times;<span class="roman">DIM</span>. 
-
-<div class="p"><!----></div>
-##bbobppfigslegendfixed##
-
-Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluations 
-                as log<sub>10</sub> value), divided by dimension for target function value BBOBPPFIGSFTARGET 
-                versus dimension. Slanted grid lines indicate quadratic scaling with the dimension. 
-
-<div class="p"><!----></div>
-##bbobppfigslegendend##
-
-Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>24</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
-
-<div class="p"><!----></div>
 ###
 
 <br /><br /><hr /><small>File translated from
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 31 Mar 2016, 14:33.</small>
+version 4.08.<br />On 01 Apr 2016, 09:56.</small>
 </html>
