made captions of pptables (many algorithm output) depend on genericsettings for the used targets

--- a/code-postprocessing/bbob_pproc/latex_commands_for_html.html
+++ b/code-postprocessing/bbob_pproc/latex_commands_for_html.html
@@ -152,9 +152,8 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of instances. A &#8595;
-        indicates the same tested against the best algorithm of BBOB-2009. Best results
-        are printed in bold.
+        than 1, with Bonferroni correction by the number of instances. A &#8595; indicates the same tested against the best
+        algorithm of BBOB-2009.Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendrlbased20##
@@ -171,9 +170,8 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of instances. A &#8595;
-        indicates the same tested against the best algorithm of BBOB-2009. Best results
-        are printed in bold.
+        than 1, with Bonferroni correction by the number of instances. A &#8595; indicates the same tested against the best
+        algorithm of BBOB-2009.Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendrlbased##
@@ -343,9 +341,8 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of instances. A &#8595;
-        indicates the same tested against the best algorithm of BBOB-2009. Best results
-        are printed in bold.
+        than 1, with Bonferroni correction by the number of instances. A &#8595; indicates the same tested against the best
+        algorithm of BBOB-2009.Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendfixed20##
@@ -363,9 +360,8 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of instances. A &#8595;
-        indicates the same tested against the best algorithm of BBOB-2009. Best results
-        are printed in bold.
+        than 1, with Bonferroni correction by the number of instances. A &#8595; indicates the same tested against the best
+        algorithm of BBOB-2009.Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendfixed##
@@ -512,42 +508,36 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendbiobjfixed5##
 
-        Average running time (<span class="roman">aRT</span>&nbsp;in number of function 
-        evaluations) divided by the respective best <span class="roman">aRT</span>&nbsp;measured during BBOB-2009 in
-        dimension 5.
-        The <span class="roman">aRT</span>&nbsp;and in braces, as dispersion measure, the half difference between 
-        10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
-                target, the corresponding best <span class="roman">aRT</span>&nbsp;        in the first row. The different target &#8710;f-values are shown in the top row.
-        #succ is the number of trials that reached the (final) target
+        Average runtime (<span class="roman">aRT</span>) to reach given targets, measured
+        in number of function evaluations, in dimension 5. For each function, the <span class="roman">aRT</span>&nbsp;
+        and, in braces as dispersion measure, the half difference between 10 and 
+        90%-tile of (bootstrapped) runtimes is shown for the different
+        target &#8710;f-values as shown in the top row. 
+        #succ is the number of trials that reached the last target
         HV<sub><span class="roman">ref</span></sub>+ 10<sup>&#8722;5</sup>.
                 The median number of conducted function evaluations is additionally given in 
         <i>italics</i>, if the target in the last column was never reached. 
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of instances. A &#8595;
-        indicates the same tested against the best algorithm of BBOB-2009. Best results
-        are printed in bold.
+        than 1, with Bonferroni correction by the number of instances. Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendbiobjfixed20##
 
-        Average running time (<span class="roman">aRT</span>&nbsp;in number of function 
-        evaluations) divided by the respective best <span class="roman">aRT</span>&nbsp;measured during BBOB-2009 in
-        dimension 20.
-        The <span class="roman">aRT</span>&nbsp;and in braces, as dispersion measure, the half difference between 
-        10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
-                target, the corresponding best <span class="roman">aRT</span>&nbsp;        in the first row. The different target &#8710;f-values are shown in the top row.
-        #succ is the number of trials that reached the (final) target
+        Average runtime (<span class="roman">aRT</span>) to reach given targets, measured
+        in number of function evaluations, in dimension 20. For each function, the <span class="roman">aRT</span>&nbsp;
+        and, in braces as dispersion measure, the half difference between 10 and 
+        90%-tile of (bootstrapped) runtimes is shown for the different
+        target &#8710;f-values as shown in the top row. 
+        #succ is the number of trials that reached the last target
         HV<sub><span class="roman">ref</span></sub>+ 10<sup>&#8722;5</sup>.
                 The median number of conducted function evaluations is additionally given in 
         <i>italics</i>, if the target in the last column was never reached. 
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of instances. A &#8595;
-        indicates the same tested against the best algorithm of BBOB-2009. Best results
-        are printed in bold.
+        than 1, with Bonferroni correction by the number of instances. Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendbiobjfixed##
@@ -595,5 +585,5 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 01 Apr 2016, 17:41.</small>
+version 4.08.<br />On 04 Apr 2016, 22:33.</small>
 </html>
